--- a/templates/admin/user/userform.html.twig
+++ b/templates/admin/user/userform.html.twig
@@ -2,25 +2,12 @@
 
 {% block contenpage %}
     <div class="">
-        <div class="page-title">
-            <div class="title_left">
-                <h5><a href="{{ path('app_admin_users') }}">{{ "backend.user.user_listing"|trans }}</a> >> {{ "backend.menu.user"|trans }} </h5>
-            </div>
-        </div>
-
         <div class="clearfix"></div>
-
         <div class="row">
             <div class="col-md-12 col-sm-12 col-xs-12">
                 <div class="x_panel">
                     <div class="x_title">
-                        <h2>{{ "backend.menu.user"|trans }}</h2>
-                        <ul class="nav navbar-right panel_toolbox">
-                            <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                            </li>
-                            <li><a class="close-link"><i class="fa fa-close"></i></a>
-                            </li>
-                        </ul>
+                        <h4 style="color:black;">Editar Usuario</h4>
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
